--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://http://13.127.76.38:9000/</sonar.host.url>
+		<sonar.host.url>http:13.127.76.38:9000/</sonar.host.url>
                 <sonar.login>df92266d5b5b1eff8b3ba92064ef1391181a860e</sonar.login>
 		
              
